# Prototype

./: Cargo.toml  README.md  TODO.md
apps/ide/: Cargo.toml
apps/ide/resources/shaders/: blur.fs  sdf.fs
apps/ide/src/: demo.rs  font.rs  input.rs  main.rs
apps/ide/src/components/: loc.rs  mod.rs  panel.rs  structure_editor.rs
apps/ide/src/components/structure_editor/: collection_view.rs  data.rs  state.rs  subject_editor.rs  tests.rs
apps/spec-validator/: Cargo.toml  README.md
apps/spec-validator/spec/: 01_core.txt  01_minimal.txt  01_mvp.txt  02_unification.txt  03_system.txt  04_interop.txt  __test1.txt  __test2.txt  __test3.txt
apps/spec-validator/spec-explain/: 01_core.txt  01_example_explain.txt  02_unification.txt  __test2.txt  __test3.txt
apps/spec-validator/src/: grammar.pest  main.rs  parser.rs
crates/sapling-app/: Cargo.toml
crates/sapling-app/src/: lib.rs  plugin.rs  registry.rs  serialization.rs
crates/sapling-data-model/: Cargo.toml
crates/sapling-data-model/src/: lib.rs  model.rs
crates/sapling-func/: Cargo.toml
crates/sapling-func-macro/: Cargo.toml
crates/sapling-gui/: Cargo.toml
crates/sapling-gui-macro/: Cargo.toml
crates/sapling-gui-macro/src/: lib.rs
crates/sapling-gui-macro/tests/: constraint_tests.rs
crates/sapling-gui/src/: base.rs  component.rs  debugger.rs  font.rs  input.rs  layout.rs  lib.rs  orchestrator.rs  prelude.rs  renderer.rs  theme.rs
crates/sapling-gui/src/layout/: constraint.rs  optimizer.rs  preset.rs  resolver.rs
crates/sapling-gui/src/renderer/: raylib_renderer.rs  raylib_util.rs
crates/sapling-gui/tests/: layout.rs  test.rs
crates/sapling-query-engine/: Cargo.toml
crates/sapling-query-engine/src/: database.rs  explain.rs  instructions.rs  iterators.rs  lib.rs  machine.rs  meta.rs  query_engine.rs  system.rs  variable_allocator.rs  variable_bank.rs  watcher.rs
crates/sapling-serialization/: Cargo.toml
crates/sapling-serialization-macro/: Cargo.toml
crates/sapling-serialization-macro/src/: lib.rs
crates/sapling-serialization/src/: lib.rs
crates/sapling-serialization/tests/: test.rs
crates/sapling-std/: Cargo.toml
crates/sapling-std/src/: lib.rs  math.rs
docs/: agent-spec.md  poc-examples.md
