[package]
name = "spec-validator"
version.workspace = true
edition.workspace = true

[dependencies]
sapling-app.workspace = true
sapling-data-model.workspace = true
sapling-query-engine.workspace = true
pest = { version = "2.7" }
pest_derive = { version = "2.7", features = ["grammar-extras"] }
anyhow = "1.0"
colored = "2.1"
similar = "2.6"
clap = { version = "4.5", features = ["derive"] }
