[package]
name = "sapling-gui-macro"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro-error.workspace = true
proc-macro2.workspace = true
proc-macro-crate.workspace = true

[dev-dependencies]
sapling-gui.workspace = true
